tests/fails/nilsym.t
if not require("fail") then return end
terra foo()
	var [what] = 4
end
